# notematic-api

./: .gitignore  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_GITHUB_ACTIONS.md  GITHUB_SETUP.md  LOGGING.md  QUICK_START.md  README.md  build.rs  config.production.toml
.github/workflows/: deploy.yml
scripts/: deploy.sh  init-shares-db.sh  test-connection.sh
src/: handlers.rs  main.rs  middleware.rs  models.rs  routes.rs  utils.rs  version.rs
