[package]
name = "notematic-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12.22" # Do komunikacji z CouchDB (opcjonalnie)
tokio = { version = "1", features = ["full"] } # Asynchroniczne operacje
dotenv = "0.15" # Obsługa zmiennych środowiskowych
