[package]
name = "notematic-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.46.1", features = ["full"] } 
dotenv = "0.15" 
bcrypt = "0.17.0"
chrono = "0.4.41"
jsonwebtoken = "9.3.1"
actix-service = "2.0.3"
futures = "0.3.31"
web = "0.2.12"
lazy_static = "1.4"
actix-cors = "0.7"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.17.0", features = ["v4"] }
regex = "1"
flexi_logger = "0.31.2"
